# AudioLink

./: README.md
.github/workflows/: AudioLink-release.yml
Flutter/: pubspec.yaml
Flutter/android/app/: build.gradle.kts
Flutter/android/app/src/main/: AndroidManifest.xml
Flutter/android/app/src/main/kotlin/dev/local/lan_audio_flutter/: MainActivity.kt  MdnsDiscovery.kt  PcmAudioService.kt
Flutter/lib/: main.dart
Flutter/test/: widget_test.dart
Rust/: Cargo.toml  build.rs
Rust/assets/: tray_icon_32.rgba
Rust/src/: app.rs  audio_capture.rs  audio_device_events.rs  audio_engine_period.rs  audio_protocol.rs  audio_stats.rs  audio_thread_priority.rs  control_server.rs  main.rs  mdns_discovery.rs  network_events.rs  tray.rs  web_admin.rs
docs/: github-actions-发布.md
