[package]
name = "AudioLink"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
auto-launch = "0.6"
axum = "0.8"
crossbeam-queue = "0.3"
local-ip-address = "0.6.13"
mdns-sd = "0.20.0"
rubato = "3.0.0"
serde_json = "1"
tao = "0.35"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = { version = "0.24", default-features = false }
webbrowser = "1"

[build-dependencies]
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Media_KernelStreaming",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Input_KeyboardAndMouse",
] }
windows-core = "0.62"
